# Python-Api

./: .env.example  README.md  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py  script.py.mako
src/core/: __init__.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
src/core/controllers/: __init__.py  user_controller.py
src/core/services/: user_service.py
tests/: test_core.py
