[tool.poetry]
name = "python-api-core"
version = "0.1.0"
description = "Core microservice (FastAPI) handling MySQL DB and migrations"
authors = ["Repo Owner <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
SQLAlchemy = "^2.0"
pymysql = "^1.0"
alembic = "^1.11"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
